# learn_rust

./: .gitignore  Cargo.toml  LICENSE  config.toml
.rest/: api.http  http-client.env.json
commons/: Cargo.toml
commons/src/: entity.rs  errors.rs  lib.rs  refined.rs  service.rs
server/: Cargo.toml  config.toml
server/src/: main.rs
server/src/api/: error.rs  mod.rs  other.rs  result.rs  routes.rs  state.rs
server/src/api/data/: handlers.rs  routes.rs
server/src/api/data/handlers/: tests.rs
server/src/api/users/: handlers.rs  mod.rs  models.rs  routes.rs
server/src/server/: logger.rs  mod.rs  settings.rs
server/src/server/handlers/: data.rs  mod.rs  users.rs
server/src/server/handlers/data/: tests.rs
server/src/users/: domain.rs  service.rs
