[workspace]

members = [
	"server",
	"commons",
]

resolver = "2"

[workspace.package]
version = "0.0.1"
authors = ["Jevgeni Goloborodko"]
description = "Example WEB API"
documentation = "https://example.com/bar"
edition = "2021"

[workspace.lints.rust]
unsafe_code = "forbid"
#missing_docs = "warn"
unused_imports = "warn"
unused_variables = "warn"
dead_code = "warn"
non_snake_case = "warn"
non_camel_case_types = "warn"
non_upper_case_globals = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_extern_crates = "warn"
unused_qualifications = "warn"
unused_results = "warn"

[workspace.dependencies]
actix-http = { version = "3.9.0" }
actix-settings = { version = "0.8.0" }
actix-service = { version = "2.0.2" }
actix-web = {  version = "4.9.0" }
apistos = { version = "0.1", features = ["extras", "qs_query"] }
chrono = { version = "0.4.22", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.6"
log = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
#rand = "0.8.5"
schemars = { package = "apistos-schemars", version = "0.8", features = ["chrono", "uuid1", "url", "rust_decimal"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"



