[workspace]

members = [
	"server",
	"commons",
]

resolver = "2"

[workspace.package]
version = "0.0.1"
authors = ["Jevgeni Goloborodko"]
description = "Example WEB API"
documentation = "https://example.com/bar"
edition = "2021"

[workspace.lints.rust]
unsafe_code = "forbid"
#missing_docs = "warn"
unused_imports = "warn"
unused_variables = "warn"
dead_code = "warn"
non_snake_case = "warn"
non_camel_case_types = "warn"
non_upper_case_globals = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_extern_crates = "warn"
unused_qualifications = "warn"
unused_results = "warn"

[workspace.dependencies]
actix-http = { version = "3.9.0" }
actix-settings = { version = "0.8.0" }
actix-service = { version = "2.0.2" }
actix-web = {  version = "4.9.0" }
apistos = { version = "0.1", features = ["extras", "qs_query"] }
async-trait = { version = "0.1.51" }
chrono = { version = "0.4.22", features = ["serde"] }
derive_more = {  version = "1.0.0", features = ["full"] }
dotenv = "0.15.0"
env_logger = "0.11.6"
fakeit = { version = "1.3.0" }
#itertoos = "0.9.0"
log = "0.4"
nutype= { version = "0.5.1", features = ["regex"] }
#syn = "2.0.96"
#quote = "1.0"
#proc-macro2 = "1.0"
uuid = { version = "1.11.1", features = ["v4", "serde"] }
#rand = "0.8.5"
schemars = { package = "apistos-schemars", version = "0.8", features = ["chrono", "uuid1", "url", "rust_decimal"] }
regex = {  version = "1.5.4" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
thiserror = { version = "2.0.11" }

#https://github.com/contain-rs - list/vec data structures
#https://github.com/danielpclark/array_tool - array helpers
#https://github.com/JasonShin/fp-core.rs - functional programming
#https://github.com/myrrlyn/tap - functionl pipes
#https://github.com/bodil/im-rs - immutable data structures
