[package]
name = "server"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
commons = { path = "../commons" }
actix-web = { workspace = true }
actix-settings = { workspace = true}
actix-service = { workspace = true }
actix-http = { workspace = true }
apistos = { workspace = true }
chrono = { workspace = true }
dotenv = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
uuid = { workspace = true}
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
